--- a/categorias/assets/styles/styles.css
+++ b/categorias/assets/styles/styles.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
     padding: 0 !important;
     font-family: 'COCOGOOSE', sans-serif;
-    background-color: #D9D9D9;
+    background-color: #D9D9D9 !important;
     font-size: 14px;
     font-weight: bold;
 }
@@ -14,7 +14,7 @@ body {
     background-color: #262524;
     color: #FFF;
     width: 100%;
-    height: 15vh;
+    max-height: 15vh;
     border-radius: 0px 0px 25px 25px;
     flex-direction: column;
 }
@@ -22,9 +22,69 @@ body {
 #categoriasDisp {
     width: 100%;
     height: 15vh;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    overflow-x: scroll;
 }
+
 
 #categoriasCarga {
     width: 100%;
-    height: 70vh;
+    height: 69vh;
+}
+
+.shop {
+    position: fixed;
+    float: right;
+    right: 0;
+    margin: 20px;
+    z-index: 3;
+  }
+
+  .restaurantes {
+    width: 140px;
+    height: 185px;
+    background-color: #FFF;
+    border-radius: 10px;
+    font-size: 10px;
+    box-shadow: 5px 5px 15px gray;
+  }
+
+  .info-restaurante {
+    width: 140px;
+    height: 85px;
+    background-color: #FFF;
+    border-radius: 10px;
+    font-size: 10px;
+    overflow: hidden;
+    overflow-y: scroll;
+  }
+
+  .img-restaurante {
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    border-radius: 10px 10px 0px 0px;
+  }
+
+  #restaurantes {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: start;
+  }
+
+  .buscar {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  input, textarea { 
+	font-family: FontAwesome, "COCOGOOSE" !important;
+}
+
+.fa-star {
+    color: #fdb700;
 }
