--- a/menu/assets/styles/styles.css
+++ b/menu/assets/styles/styles.css
@@ -46,7 +46,7 @@ html {
     display: block;
     width: 50%;
     height: 2px;
-    background-color: #444;
+    background-color: #FFF;
     float: left;
     transform-origin: center center;
     transition: transform 250ms ease;
